bugfix: hide vertical scrollbars on ListPreview components on Home view

--- a/app/js/components/home/ListPreview/style.scss
+++ b/app/js/components/home/ListPreview/style.scss
@@ -10,22 +10,23 @@
 }
 
 .articles {
-    height: 30.2rem;
+    height: 31.2rem;
     will-change: scroll-position;
     white-space: nowrap;
-    overflow: auto;
+    overflow-y: hidden;
+    overflow-x: scroll;
     background: white;
     box-shadow: 2px 2px 10px rgba(0,0,0,0.2);
 }
 
 .article {
     display: inline-block;
-    padding: 0.5rem 0.5rem 0 0;
+    padding: 1rem 1rem 0 0;
     width: 80%;
     white-space: normal;
 
     &:first-child {
-        padding-left: 0.5rem;
+        padding-left: 1rem;
     }
 }
 
